static/styles/style.css
body {
    background-color:rgb(243, 239, 236);
    margin: 0;
}

.topnav {
    overflow: hidden;
    background-color: #333;
    padding: 0%;
}

.topnav h1 {
    padding: 7px 7px;
    margin: 0%;
    color: white;
    text-decoration: none;
    font-size: xx-large;
}

.content {
    padding-top: 10px;
}

#description {
    padding: 10px 10px;
    text-align: center;
}

.content .entry 
{
    margin: 10px 20%;
    min-width: 900px;
    min-height: 600px;
    background-color: white;
    padding: 5px 15px;
}

.content .entry h2 {
    margin: 0%;
    padding-left: 0;
}

.content .entry .entry_content {
    padding-left: 20px;
}

.chart_container{
    width: 95%;
}

